# xline_base_controller

./: .gitignore  doc.txt  doc2.txt  kill_nodes.sh  printer_cmd.txt  send_code.sh
docs/: CALIBRATION_SERVICE_USAGE.md  line_follow_controller.md  planned_cad_2_transformed.json  rpp_follow_controller.md  xline_path_execution_design.md
src/follow_controller/: CMakeLists.txt  package.xml
src/follow_controller/config/: line.yaml
src/follow_controller/include/follow_controller/: base_follow_controller.hpp  line_follow_controller.hpp  rpp_follow_controller.hpp  yaml_parser.hpp
src/follow_controller/src/: line_follow_controller.cpp  rpp_follow_controller.cpp
src/xline_base_controller/: CMakeLists.txt  package.xml
src/xline_base_controller/include/xline_base_controller/: inkjet_controller.hpp  motion_control_center.hpp
src/xline_base_controller/src/: base_controller_node.cpp  inkjet_controller.cpp  motion_control_center.cpp
src/xline_follow_controller/: CMakeLists.txt  package.xml
src/xline_follow_controller/config/: line.yaml  rpp_circle.yaml  rpp_curve.yaml
src/xline_follow_controller/include/xline_follow_controller/: base_follow_controller.hpp  follow_common.hpp  line_follow_controller.hpp  logging_compat.hpp  rpp_follow_controller.hpp  yaml_parser.hpp
src/xline_follow_controller/src/: line_follow_controller.cpp  rpp_follow_controller.cpp
src/xline_inkjet_printer/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/xline_inkjet_printer/config/: tcp_config.yaml
src/xline_inkjet_printer/include/xline_inkjet_printer/: inkjet_printer_node.hpp
src/xline_inkjet_printer/resource/: xline_inkjet_printer
src/xline_inkjet_printer/src/: inkjet_printer_node.cpp
src/xline_inkjet_printer/xline_inkjet_printer/: __init__.py  async_inkjet_node.py  async_tcp_client.py  command_templates.py  config_validator.py  ink_level_query.py  inkjet_client_node.py  inkjet_node.py  printer_client.py  protocol.py  tcp_client.py
src/xline_inkjet_printer/xline_inkjet_printer/config/: printer.yaml  printers.yaml
src/xline_localization/: CMakeLists.txt  README.md  package.xml
src/xline_localization/config/: localization_params.yaml
src/xline_localization/include/xline_localization/: localization_node.hpp
src/xline_localization/src/: localization_main.cpp  localization_node.cpp
src/xline_msgs/: CMakeLists.txt  doc.txt
src/xline_msgs/action/: ExecutePlan.action
src/xline_msgs/src/xline_msgs/: CMakeLists.txt  package.xml
src/xline_msgs/src/xline_msgs/action/: ExecutePlan.action
src/xline_msgs/src/xline_msgs/srv/: ConfigurePrint.srv  LnCommand.srv  PrinterCommand.srv  QuickCommand.srv  SetPrinterActive.srv  SetPrinterEnabled.srv
