<?xml version="1.0"?>
<package format="3">
  <name>xline_inkjet_printer</name>
  <version>0.0.1</version>
  <description>Inkjet printer control node (Python, ROS 2).</description>
  <maintainer email="maintainer@example.com">xline</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>xline_msgs</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
