<?xml version="1.0"?>
<package format="3">
  <name>xline_msgs</name>
  <version>0.1.0</version>
  <description>ROS 2 common messages for xline</description>
  <maintainer email="user@example.com">xline</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

